<resources>
    <string name="app_name">Trade House</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Ready">Готовы начать?</string>
    <string name="start_without_registration">Начать без регистрации</string>
    <string name="register">Зарегестрироваться</string>
    <string name="next">next</string>
    <string name="password">password</string>
    <string name="mail_code">mail_code</string>
    <string name="hidee">hidee</string>
    <string name="next___">next__</string>
    <string name="other_code">other_code</string>
    <string name="accept">accept</string>
    <string name="agree_with_police">aqree_with_police</string>
    <string name="policy_con">police_con</string>
    <string name="mail_or_phone_number">mail_or_phone_number</string>
    <string name="code_mail">code_mail</string>
    <string name="hide">hide</string>
    <string name="_next">_next</string>
    <string name="send_other_code">send_other_code</string>
    <string name="surname">surname</string>
    <string name="name">name</string>
    <string name="surname_">surname_</string>
    <string name="next_">next_</string>
    <string name="mail">mail</string>
    <string name="next_one">next_oe</string>
    <string name="social_network">social_network</string>
    <string name="create_a_password">create_a_password</string>
    <string name="passwordd">passwordd</string>
    <string name="repeat_password">repeat_passwordd</string>
    <string name="nextt">nextt</string>
    <string name="enter_password">enter_password</string>
    <string name="input">input</string>
    <string name="SignUp">SignUp</string>
    <string name="mail_for_ac">Введите почту для создания аккаунта</string>
    <string name="quick_reg">quick_reg</string>
    <string name="next__">next__</string>
    <string name="phone_number_or_mail">phone_number_or_mail</string>
    <string name="search">Найти</string>
    <string name="filter">filter</string>
    <string name="call">Позвонить</string>
    <string name="house_image">house_image</string>
    <string name="address">Бишкек, улица Пушкина, дом 5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_search">search</string>
    <string name="title_user">user</string>

    <string name="edittext_hint_ot"><font size="12">   От</font></string>
    <string name="edittext_hint_do"><font size="12">   До</font></string>

    <string-array name="Filter">
        <item>Купить</item>
        <item>Снять</item>
        <item>Продать</item>
    </string-array>
    <string name="_1_white_box" translatable="false">В городе Бишкек, на улице Пушкина продается 1-этажный элитный дом. Дом комфорт класса.В дом проведены теплые полы и выполнена обработка стен под white box. Дом сдан ПСО, можно начинать ремонт. Данный дом сквозной, отличный вариант для жилья или сдачи.</string>
    <string name="opisanie" translatable="false">Описание</string>
    <string name="raspolojenie" translatable="false">Расположение</string>
    <string name="_15_000_000">15 000 000</string>
    <string name="_100_m2">100 M2</string>
    <string name="_8">8 сот.</string>
    <string name="address_">Адрес: Дом Колотушкина</string>
    <string name="house">house</string>
    <string name="location">location</string>
    <string name="_1">1-эт.дом</string>
    <string name="phone">Позвонить</string>
    <string name="info">О доме</string>
    <string name="floors">Этажи:</string>
    <string name="one">1</string>
    <string name="bathroom">Санузел:</string>
    <string name="combined">Совмещенный</string>
    <string name="rooms">Комнат:</string>
    <string name="fife">5</string>
    <string name="outside">На улицу</string>
    <string name="square">Площадь(Общая):</string>
    <string name="seilings">Высота потолков:</string>
    <string name="_21">21 м.</string>
    <string name="residential">Площадь(Жилая):</string>
    <string name="contacts">Контакты</string>
    <string name="windows">Окна:</string>
    <string name="adress">Бишкек, улица Пушкина, дом Колатушкина</string>
    <string name="sobs">Собственник</string>
    <string name="obyavlenie">Размещает обьявления:</string>
    <string name="nomer">Номер:</string>
    <string name="new_ad">Новое объявление</string>
    <string name="location_ad">Расположение</string>
    <string name="create_address">Напишите адрес</string>
    <string name="create_aprtment_nbr">Номер квартиры</string>
    <string name="about_apartment">О квартире</string>
    <string name="floor">Этаж</string>
    <string name="square_rooms">Площадь комнат</string>
    <string name="all_square">Общая</string>
    <string name="living_square">Жилая</string>
    <string name="ceiling_height">Высота потолков</string>
    <string name="create_bathroom">Санузел</string>
    <string name="combined_bathroom">Совмещенный</string>
    <string name="separate_bathroom">Раздельный</string>
    <string name="windows_create">Окна</string>
    <string name="in_yard">Во двор</string>
    <string name="to_the_street">На улицу</string>
    <string name="photos">Фотографии</string>
    <string name="select_photos">Выберите фотографии</string>
    <string name="video">Видео</string>
    <string name="Description">Описание</string>
    <string name="link_video">Ссылка на видео</string>
    <string name="description_create">Расскажите о квартире</string>

    <string-array name="TypeAdCreate">
        <item>Квартира</item>
        <item>Дом</item>
        <item>Новостройка</item>
    </string-array>
</resources>