<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".Fragment">
    <ImageView
        android:id="@+id/image_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/img_1"
        app:layout_constraintBottom_toBottomOf="@+id/image_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/surname"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingStart="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_icon" />

    <EditText
        android:hint="@string/name"
        android:id="@+id/tv_name"
        android:layout_marginTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingStart="20dp"
        android:background="@drawable/btn_radius"
        app:layout_constraintTop_toBottomOf="@+id/tv_main"
         />
    <EditText
        android:id="@+id/ed_surname"
        android:hint="@string/surname_"
        android:paddingStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/btn_radius"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        />
    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_next"
        android:text="@string/next_"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/ed_surname" />

</androidx.constraintlayout.widget.ConstraintLayout>