<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <ImageView
        android:id="@+id/image_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/imgxml"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/img_1"
        app:layout_constraintBottom_toBottomOf="@+id/image_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_main"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mail_or_phone_number"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_icon" />

    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/ed_gmail"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/btn_radius"
        android:hint="@string/phone_number_or_mail"
        android:paddingStart="20dp"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/tv_main" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_next"
        android:text="@string/next__"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/ed_gmail" />

    <TextView
        android:id="@+id/tv_registr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/quick_reg"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_next" />

    <Button
        android:id="@+id/btn_yandex"
        android:layout_width="188dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/btn_yandex"
        android:drawableStart="@drawable/yandex_img"
        android:padding="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_registr" />

    <Button
        android:id="@+id/btn_google"
        android:layout_width="188dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:padding="65dp"
        android:background="@drawable/btn_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_yandex"
        app:layout_constraintTop_toBottomOf="@id/tv_registr"
        />

</androidx.constraintlayout.widget.ConstraintLayout>